Minor header clarification

--- a/2017-01-17-string-formaitting-in-python3.org
+++ b/2017-01-17-string-formaitting-in-python3.org
@@ -1,8 +1,8 @@
 #+BEGIN_EXPORT html
 ---
 layout: post
-title: Python3
-tagline: " new string formatting approach"
+title: Python3 string formatting 
+tagline: " new approach"
 permalink: /python3/string/formatting.html
 categories: [literate programming, emacs, Python3]
 tags: [strings, formatting]
