--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -1519,3 +1519,17 @@ tags: [coding, algorithms]
 
     convertFracs [(1, 2), (1, 3), (1, 4)] `shouldBe` [(6, 12), (4, 12), (3, 12)]
    #+END_QUOTE
+** Solution
+   #+BEGIN_SRC python :results output
+     def convertFracts(lst):
+         pass
+
+     assert(convertFracts([(1, 2), (1, 3), (1, 4)]) ==
+            [(6, 12), (4, 12), (3, 12)])
+     assert(convertFracts([[361560, 681200],
+                           [45240, 681200],
+                           [510900, 681200]]) ==
+            [[18078, 34060],
+             [2262, 34060],
+             [25545, 34060]])
+   #+END_SRC
