--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -1536,12 +1536,17 @@ tags: [coding, algorithms]
      def convertFracts(lst):
          pass
 
-     assert(convertFracts([(1, 2), (1, 3), (1, 4)]) ==
-            [(6, 12), (4, 12), (3, 12)])
-     assert(convertFracts([[361560, 681200],
-                           [45240, 681200],
-                           [510900, 681200]]) ==
-            [[18078, 34060],
-             [2262, 34060],
-             [25545, 34060]])
+     # assert(convertFracts([(1, 2), (1, 3), (1, 4)]) ==
+     #        [(6, 12), (4, 12), (3, 12)])
+     # assert(convertFracts([[361560, 681200],
+     #                       [45240, 681200],
+     #                       [510900, 681200]]) ==
+     #        [[18078, 34060],
+     #         [2262, 34060],
+     #         [25545, 34060]])
+
+
+     assert(gcd(12, 4) == 4)
+     assert(gcdl([6, 12, 36]) == 6)
+     assert(gcdl([1, 2, 3]) == 1)
    #+END_SRC
