Gcd replacement from stdlib

--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -1521,11 +1521,8 @@ tags: [coding, algorithms]
    #+END_QUOTE
 ** Solution
    #+BEGIN_SRC python :results output
-     def gcd (a,b):
-         if (b == 0):
-             return a
-         else:
-              return gcd (b, a % b)
+     from fractions import Fraction, gcd
+
 
      def gcdl(L):
          result = L[0]
