--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -1475,51 +1475,54 @@ tags: [coding, algorithms]
    #+END_SRC
 ** Solution
    #+BEGIN_SRC python :results output
-     def gcd(a, b):
-         while(b):
-             a, b = b, a % b
-         return a
+     from fractions import Fraction, gcd
 
-     def simplify(n, d):
-         g = gcd(n, d)
-         if g > 1:
-             return str(n//g) + '/' + str(d//g)
-         else:
-             return str(n) + '/' + str(d)
 
      def mixed_fraction(s):
          n, d = map(int, s.split('/'))
          if n != 0:
              if d != 0:
-                 if abs(n) < d:
-                     return simplify(n, d)
+                 if n * d > 0:
+                     signature = True
                  else:
-                     # for positive argiments olny!
-                     integer_part = n // d
-                     ratio = n % d # * integer_part
-                     if ratio:
-                         return str(integer_part) + ' ' + simplify(ratio, d)
-                     else:
-                         return str(integer_part)
+                     signature = False
+                 F = Fraction(n, d)
+                 if abs(n) < abs(d):
+                     return str(F.numerator) + '/' + str(F.denominator)
+                 else:  # integer part exists
+                     if signature:
+                         integer_part = F.__floor__()
+                         fraction_part = F.numerator - F.denominator * integer_part
+                         if fraction_part == 0:
+                             return str(integer_part)
+                         else:  # fraction part exists also
+                             fraction_part = Fraction(fraction_part, F.denominator)
+                             return str(integer_part) + ' ' + \
+                                 str(fraction_part.numerator) + \
+                                 '/' + str(fraction_part.denominator)
+                     else:  # negative result composition
+                         pass
              else:
                  1 / 0
          else:
              return '0'
 
-     print(mixed_fraction('-10/7'))
-     print(mixed_fraction('-22/-7'))
-     assert(simplify(8, 12) == '2/3')
-     assert(simplify(-8, 12) == '-2/3')
-     assert(gcd(2, 3) == 1)
-     assert(gcd(14, 21) == 7)
-     assert(gcd(-14, 21) == 7)
-     assert(gcd(12, 144) == 12)
+     # print(mixed_fraction('6/3'))
+     # print(mixed_fraction('-22/-7'))
+     # assert(simplify(8, 12) == '2/3')
+     # assert(simplify(-8, 12) == '-2/3')
+     # assert(gcd(2, 3) == 1)
+     # assert(gcd(14, 21) == 7)
+     # assert(gcd(-14, 21) == 7)
+     # assert(gcd(12, 144) == 12)
      assert(mixed_fraction('42/9') == '4 2/3')
      assert(mixed_fraction('6/3') == '2')
      assert(mixed_fraction('4/6') == '2/3')
+     assert(mixed_fraction('-4/6') == '-2/3')
      assert(mixed_fraction('0/18891') == '0')
+     assert(mixed_fraction('10/7') == '1 3/7')
+     assert(mixed_fraction('-22/-7') == '3 1/7')
      # assert(mixed_fraction('-10/7') == '-1 3/7')
-     # Test.assert_equals(mixed_fraction('-22/-7'), '3 1/7')
      # Test.expect_error("Must raise ZeroDivisionError", lambda: mixed_fraction(0, 0))
      # Test.expect_error("Must raise ZeroDivisionError", lambda: mixed_fraction(3, 0))
    #+END_SRC
