--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -1603,3 +1603,22 @@ tags: [coding, algorithms]
      assert(gcdl([6, 12, 36]) == 6)
      assert(gcdl([1, 2, 3]) == 1)
    #+END_SRC
+* Strip Url Params
+** Description
+   #+BEGIN_QUOTE
+   Complete the method so that it does the following:
+
+   - Removes any duplicate query string parameters from the url
+   - Removes any query string parameters specified within the 2nd argument (optional array)
+
+   Examples:
+
+   stripUrlParams('www.codewars.com?a=1&b=2&a=2') // returns 'www.codewars.com?a=1&b=2'
+   stripUrlParams('www.codewars.com?a=1&b=2&a=2', ['b']) // returns 'www.codewars.com?a=1'
+   stripUrlParams('www.codewars.com', ['b']) // returns 'www.codewars.com'
+   #+END_QUOTE
+** Solution
+   #+BEGIN_SRC python :results output
+     def strip_url_params(url, params_to_strip = []):
+         pass
+   #+END_SRC
