--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -1602,6 +1602,7 @@ tags: [coding, algorithms]
      assert(gcd(12, 4) == 4)
      assert(gcdl([6, 12, 36]) == 6)
      assert(gcdl([1, 2, 3]) == 1)
+     assert(gcdl([361560, 681200, 45240, 510900]) == 20)
    #+END_SRC
 * Strip Url Params
 ** Description
