Test suite for GET url argument parser

--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -1640,4 +1640,12 @@ tags: [coding, algorithms]
                  continue
          return header + '?' + '&'.join(result_arguments)
 
+
+     assert(strip_url_params('www.codewars.com?a=1&b=2&a=2') == 'www.codewars.com?a=1&b=2')
+     assert(strip_url_params('www.codewars.com?a=1&a=2') == 'www.codewars.com?a=1')
+     assert(strip_url_params('www.codewars.com?a=1&b=2&a=2', ['b']) ==  'www.codewars.com?a=1')
+     assert(strip_url_params('www.codewars.com', ['b']) == 'www.codewars.com')
    #+END_SRC
+
+   #+RESULTS:
+
