--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -1675,12 +1675,27 @@ tags: [coding, algorithms]
    #+END_QUOTE
 ** Solution
    #+BEGIN_SRC python :results output
-     def find_true_marker(s, markers):
-         for i in markers:
-             new_marker = s.find(i)
-             if new_marker > -1 and new_marker < marker:
-                 marker = new_marker
-         return '#'
+     def symbol_in_string(s, symbols):
+         result = False
+         for i in symbols:
+             if i in s:
+                 result = True
+                 break
+         return result
+
+     def find_first_marker(s, markers):
+         if symbol_in_string(s, markers):
+             for i in markers:
+                 position = len(s)
+                 marker = ''
+                 new_position = s.find(i)
+                 if new_position != -1 and new_position < position:
+                     marker = i
+                     position = new_position
+             return marker
+         else:  # no stop symbol there
+             return False
+
 
      def solution(txt, markers):
          try:
