--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -1709,11 +1709,14 @@ tags: [coding, algorithms]
          #         try:
          #             point = i.find(j)
          #             pass 
-            
-        
 
 
-     assert(find_true_marker('Abcd@#, !, $', ['!', '$', '#']) == '#')
+     assert(symbol_in_string('ABCD', ['a', 'b', 'c']) == False)
+     assert(symbol_in_string('ABCD', ['a', 'A', 'B']) == True)
+     print(find_first_marker('Abcd@#, !, $', ['!', '#', '$']))
+     assert(find_first_marker('Abcd@#, !, $', ['!', '$', '#']) == '#')
+     assert(find_first_marker('Abcd@#, !, $', ['2', '1', '3']) == False)
+     assert(find_first_marker('Abcd@#, !, $', ['!', '#', '$']) == '#')
      # assert(solution("apples, pears # and bananas\ngrapes\nbananas !apples", ["#", "!"]) == "apples, pears\ngrapes\nbananas")
      # assert(solution("a #b\nc\nd $e f g", ["#", "$"]) == "a\nc\nd")
    #+END_SRC
