RGB converter task description

--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -1720,3 +1720,18 @@ tags: [coding, algorithms]
      # assert(solution("apples, pears # and bananas\ngrapes\nbananas !apples", ["#", "!"]) == "apples, pears\ngrapes\nbananas")
      # assert(solution("a #b\nc\nd $e f g", ["#", "$"]) == "a\nc\nd")
    #+END_SRC
+* RGB To Hex Conversion
+** Description
+   #+BEGIN_QUOTE
+   The rgb() method is incomplete. Complete the method so that passing in RGB
+   decimal values will result in a hexadecimal representation being returned.
+   The valid decimal values for RGB are 0 - 255. Any (r,g,b) argument values
+   that fall out of that range should be rounded to the closest valid value.
+
+   The following are examples of expected output values:
+
+   rgb(255, 255, 255) # returns FFFFFF
+   rgb(255, 255, 300) # returns FFFFFF
+   rgb(0,0,0) # returns 000000
+   rgb(148, 0, 211) # returns 9400D3
+   #+END_QUOTE
