--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -1735,3 +1735,15 @@ tags: [coding, algorithms]
    rgb(0,0,0) # returns 000000
    rgb(148, 0, 211) # returns 9400D3
    #+END_QUOTE
+** Solution
+   #+BEGIN_SRC python :results output
+     def rgb(r, g, b):
+         #your code here :)
+
+
+     test.assert_equals(rgb(0,0,0),"000000", "testing zero values")
+     test.assert_equals(rgb(1,2,3),"010203", "testing near zero values")
+     test.assert_equals(rgb(255,255,255), "FFFFFF", "testing max values")
+     test.assert_equals(rgb(254,253,252), "FEFDFC", "testing near max values")
+     test.assert_equals(rgb(-20,275,125), "00FF7D", "testing out of range values")
+   #+END_SRC
