--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -1741,9 +1741,9 @@ tags: [coding, algorithms]
          #your code here :)
 
 
-     test.assert_equals(rgb(0,0,0),"000000", "testing zero values")
-     test.assert_equals(rgb(1,2,3),"010203", "testing near zero values")
-     test.assert_equals(rgb(255,255,255), "FFFFFF", "testing max values")
-     test.assert_equals(rgb(254,253,252), "FEFDFC", "testing near max values")
-     test.assert_equals(rgb(-20,275,125), "00FF7D", "testing out of range values")
+     # assert(rgb(0,0,0) == "000000")
+     # assert(rgb(1,2,3) == "010203")
+     # assert(rgb(255,255,255) == "FFFFFF")
+     # assert(rgb(254,253,252) == "FEFDFC")
+     # assert(rgb(-20,275,125) == "00FF7D")
    #+END_SRC
