--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -1766,3 +1766,32 @@ tags: [coding, algorithms]
      assert(rgb(254,253,252) == "FEFDFC")
      assert(rgb(-20,275,125) == "00FF7D")
    #+END_SRC
+* Calculator
+** Description
+   #+BEGIN_QUOTE
+   Create a simple calculator that given a string of operators (+ - * and /)
+   and numbers separated by spaces returns the value of that expression
+
+   Example:
+
+   Calculator().evaluate("2 / 2 + 3 * 4 - 6") # => 7
+   Remember about the order of operations! Multiplications and divisions have
+   a higher priority and should be performed left-to-right. Additions and
+   subtractions have a lower priority and should also be performed left-to-right.
+   #+END_QUOTE
+** Solution
+   #+BEGIN_SRC python :results output
+     class Calculator(object):
+         def evaluate(self, string):
+             result = eval(string)
+             if str(result)[-1] != 0:
+                 return round(result, 5)
+             else:
+                 return int(result)
+
+
+     assert(Calculator().evaluate("2 / 2 + 3 * 4 - 6") == 7)
+   #+END_SRC
+
+   #+RESULTS:
+
