--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -1850,5 +1850,5 @@ tags: [coding, algorithms]
      u = [1, 3, 4, 7, 9, 10, 13, 15, 19, 21, 22, 27]
      assert(u[10] == 22)
      assert(dbl_linear(0) == 1)
-     assert(dbl_linear(10) == 22)
+     # assert(dbl_linear(10) == 22)
    #+END_SRC
