--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -1828,6 +1828,13 @@ tags: [coding, algorithms]
      def f3(k):
          return 3 * k + 1
 
+     def visualize(n):
+         result = [1]
+         for i in range(n)[1:]:
+             result.append(f2(i))
+             result.append(f3(i))
+         return result
+
      def dbl_linear(n):
          """
          y = 2 * x + 1 and z = 3 * x + 1
@@ -1844,11 +1851,16 @@ tags: [coding, algorithms]
                  pass
          else:
              return 1
-    
 
 
+
+     print(visualize(10))
      u = [1, 3, 4, 7, 9, 10, 13, 15, 19, 21, 22, 27]
      assert(u[10] == 22)
      assert(dbl_linear(0) == 1)
      # assert(dbl_linear(10) == 22)
    #+END_SRC
+
+   #+RESULTS:
+   : [1, 3, 4, 5, 7, 7, 10, 9, 13, 11, 16, 13, 19, 15, 22, 17, 25, 19, 28]
+
