--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -1820,3 +1820,35 @@ tags: [coding, algorithms]
 
   Focus attention on efficiency
    #+END_QUOTE
+** Solution
+   #+BEGIN_SRC python :results output
+     def f2(k):
+         return 2 * k + 1
+
+     def f3(k):
+         return 3 * k + 1
+
+     def dbl_linear(n):
+         """
+         y = 2 * x + 1 and z = 3 * x + 1
+         u = [1, 3, 4, 7, 9, 10, 13, 15, 19, 21, 22, 27, ...]
+         u[1, 3, 5 ...] = function(2)
+         u[2, 4, 6 ...] = function(3) 
+         """
+         if n != 0:
+             if n % 2:
+                 # result is function of 3
+                 k = n // 3
+             else:
+                 # result is function of 2
+                 pass
+         else:
+             return 1
+    
+
+
+     u = [1, 3, 4, 7, 9, 10, 13, 15, 19, 21, 22, 27]
+     assert(u[10] == 22)
+     assert(dbl_linear(0) == 1)
+     assert(dbl_linear(10) == 22)
+   #+END_SRC
