--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -1830,9 +1830,20 @@ tags: [coding, algorithms]
 
      def visualize(n):
          result = [1]
-         for i in range(n)[1:]:
-             result.append(f2(i))
-             result.append(f3(i))
+         while len(result) < n:
+             result.append(f2(result[-1]))
+             result.append(f3(result[-2]))
+             result.append(f2(result[-2]))
+             result.append(f2(result[-2]))
+             result.append(f3(result[-4]))
+             result.append(f3(result[-4]))
+             result.append(f2(result[-4]))
+             result.append(f2(result[-4]))
+
+             # result = [1]
+         # for i in range(n)[1:]:
+         #     result.append(f2(i))
+         #     result.append(f3(i))
          return result
 
      def dbl_linear(n):
@@ -1854,7 +1865,7 @@ tags: [coding, algorithms]
 
 
 
-     print(visualize(10))
+     print(visualize(5))
      u = [1, 3, 4, 7, 9, 10, 13, 15, 19, 21, 22, 27]
      assert(u[10] == 22)
      assert(dbl_linear(0) == 1)
