Print function refactoring for Python3

--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -32,7 +32,7 @@ tags: [coding, algorithms]
 
     input_string = 'John the dully boy write this book'
 
-    print getCount(input_string)
+    print(getCount(input_string))
     assert(getCount(input_string) == 9)
 
   #+END_SRC
