Test suite extension

--- a/2016-11-12-toys-tasks.org
+++ b/2016-11-12-toys-tasks.org
@@ -1966,7 +1966,7 @@ tags: [coding, algorithms]
 
      assert(next_bigger(9) == -1)
      assert(next_bigger(111) == -1)
-     # assert(next_bigger(531) == -1)
+     assert(next_bigger(531) == -1)
 
      # assert(next_bigger(12) == 21)
      # assert(next_bigger(513) == 531)
